src/test/ConstantFail/ConstantFail.expected
error: ConstantFail.panda:2:3: cannot modify static variable 'x'
1 error
